gen/csvshiftgrammar_parser.go
// Code generated from /home/sav/Development/Go/csvshift/grammar/CsvShiftGrammar.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // CsvShiftGrammar

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type CsvShiftGrammarParser struct {
	*antlr.BaseParser
}

var csvshiftgrammarParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func csvshiftgrammarParserInit() {
	staticData := &csvshiftgrammarParserStaticData
	staticData.literalNames = []string{
		"", "'Input Columns'", "'Output Columns'", "'Column'", "'Columns'",
		"'-> Trim'", "'-> Replace'", "'-> Join with'", "'-> ToLower'", "'-> ToUpper'",
		"'-> Split on'", "'-> RegexReplace'", "'-> RegexExtract'", "'with'",
		"'as'", "','", "'\"'", "'->'",
	}
	staticData.symbolicNames = []string{
		"", "INPUT", "OUTPUT", "COLUMN", "COLUMNS", "TRIM", "REPLACE", "JOIN",
		"LOWER", "UPPER", "SPLIT", "REGEXREPLACE", "REGEXEXTRACT", "WITH", "AS",
		"COMMA", "QUOTE", "ARROW", "IDENTIFIER", "STRING", "WS",
	}
	staticData.ruleNames = []string{
		"csvTransform", "inputSection", "outputSection", "columnModifierSection",
		"singleColumnModifierSection", "multipleColumnModifierSection", "singleColumnTransformation",
		"multipleColumnTransformation", "columns",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// CsvShiftGrammarParserInit initializes any static state used to implement CsvShiftGrammarParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewCsvShiftGrammarParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CsvShiftGrammarParserInit() {
	staticData := &csvshiftgrammarParserStaticData
	staticData.once.Do(csvshiftgrammarParserInit)
}

// NewCsvShiftGrammarParser produces a new parser instance for the optional input antlr.TokenStream.
func NewCsvShiftGrammarParser(input antlr.TokenStream) *CsvShiftGrammarParser {
	CsvShiftGrammarParserInit()
	this := new(CsvShiftGrammarParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &csvshiftgrammarParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "CsvShiftGrammar.g4"

	return this
}

// CsvShiftGrammarParser tokens.
const (
	CsvShiftGrammarParserEOF          = antlr.TokenEOF
	CsvShiftGrammarParserINPUT        = 1
	CsvShiftGrammarParserOUTPUT       = 2
	CsvShiftGrammarParserCOLUMN       = 3
	CsvShiftGrammarParserCOLUMNS      = 4
	CsvShiftGrammarParserTRIM         = 5
	CsvShiftGrammarParserREPLACE      = 6
	CsvShiftGrammarParserJOIN         = 7
	CsvShiftGrammarParserLOWER        = 8
	CsvShiftGrammarParserUPPER        = 9
	CsvShiftGrammarParserSPLIT        = 10
	CsvShiftGrammarParserREGEXREPLACE = 11
	CsvShiftGrammarParserREGEXEXTRACT = 12
	CsvShiftGrammarParserWITH         = 13
	CsvShiftGrammarParserAS           = 14
	CsvShiftGrammarParserCOMMA        = 15
	CsvShiftGrammarParserQUOTE        = 16
	CsvShiftGrammarParserARROW        = 17
	CsvShiftGrammarParserIDENTIFIER   = 18
	CsvShiftGrammarParserSTRING       = 19
	CsvShiftGrammarParserWS           = 20
)

// CsvShiftGrammarParser rules.
const (
	CsvShiftGrammarParserRULE_csvTransform                  = 0
	CsvShiftGrammarParserRULE_inputSection                  = 1
	CsvShiftGrammarParserRULE_outputSection                 = 2
	CsvShiftGrammarParserRULE_columnModifierSection         = 3
	CsvShiftGrammarParserRULE_singleColumnModifierSection   = 4
	CsvShiftGrammarParserRULE_multipleColumnModifierSection = 5
	CsvShiftGrammarParserRULE_singleColumnTransformation    = 6
	CsvShiftGrammarParserRULE_multipleColumnTransformation  = 7
	CsvShiftGrammarParserRULE_columns                       = 8
)

// ICsvTransformContext is an interface to support dynamic dispatch.
type ICsvTransformContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	InputSection() IInputSectionContext
	OutputSection() IOutputSectionContext
	EOF() antlr.TerminalNode
	AllColumnModifierSection() []IColumnModifierSectionContext
	ColumnModifierSection(i int) IColumnModifierSectionContext

	// IsCsvTransformContext differentiates from other interfaces.
	IsCsvTransformContext()
}

type CsvTransformContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCsvTransformContext() *CsvTransformContext {
	var p = new(CsvTransformContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CsvShiftGrammarParserRULE_csvTransform
	return p
}

func (*CsvTransformContext) IsCsvTransformContext() {}

func NewCsvTransformContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CsvTransformContext {
	var p = new(CsvTransformContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CsvShiftGrammarParserRULE_csvTransform

	return p
}

func (s *CsvTransformContext) GetParser() antlr.Parser { return s.parser }

func (s *CsvTransformContext) InputSection() IInputSectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputSectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputSectionContext)
}

func (s *CsvTransformContext) OutputSection() IOutputSectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOutputSectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOutputSectionContext)
}

func (s *CsvTransformContext) EOF() antlr.TerminalNode {
	return s.GetToken(CsvShiftGrammarParserEOF, 0)
}

func (s *CsvTransformContext) AllColumnModifierSection() []IColumnModifierSectionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IColumnModifierSectionContext); ok {
			len++
		}
	}

	tst := make([]IColumnModifierSectionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IColumnModifierSectionContext); ok {
			tst[i] = t.(IColumnModifierSectionContext)
			i++
		}
	}

	return tst
}

func (s *CsvTransformContext) ColumnModifierSection(i int) IColumnModifierSectionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IColumnModifierSectionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IColumnModifierSectionContext)
}

func (s *CsvTransformContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CsvTransformContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CsvTransformContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.EnterCsvTransform(s)
	}
}

func (s *CsvTransformContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.ExitCsvTransform(s)
	}
}

func (p *CsvShiftGrammarParser) CsvTransform() (localctx ICsvTransformContext) {
	this := p
	_ = this

	localctx = NewCsvTransformContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CsvShiftGrammarParserRULE_csvTransform)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.InputSection()
	}
	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == CsvShiftGrammarParserCOLUMN || _la == CsvShiftGrammarParserCOLUMNS {
		{
			p.SetState(19)
			p.ColumnModifierSection()
		}

		p.SetState(24)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(25)
		p.OutputSection()
	}
	{
		p.SetState(26)
		p.Match(CsvShiftGrammarParserEOF)
	}

	return localctx
}

// IInputSectionContext is an interface to support dynamic dispatch.
type IInputSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INPUT() antlr.TerminalNode
	Columns() IColumnsContext

	// IsInputSectionContext differentiates from other interfaces.
	IsInputSectionContext()
}

type InputSectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputSectionContext() *InputSectionContext {
	var p = new(InputSectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CsvShiftGrammarParserRULE_inputSection
	return p
}

func (*InputSectionContext) IsInputSectionContext() {}

func NewInputSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputSectionContext {
	var p = new(InputSectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CsvShiftGrammarParserRULE_inputSection

	return p
}

func (s *InputSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *InputSectionContext) INPUT() antlr.TerminalNode {
	return s.GetToken(CsvShiftGrammarParserINPUT, 0)
}

func (s *InputSectionContext) Columns() IColumnsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IColumnsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IColumnsContext)
}

func (s *InputSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.EnterInputSection(s)
	}
}

func (s *InputSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.ExitInputSection(s)
	}
}

func (p *CsvShiftGrammarParser) InputSection() (localctx IInputSectionContext) {
	this := p
	_ = this

	localctx = NewInputSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CsvShiftGrammarParserRULE_inputSection)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(28)
		p.Match(CsvShiftGrammarParserINPUT)
	}
	{
		p.SetState(29)
		p.Columns()
	}

	return localctx
}

// IOutputSectionContext is an interface to support dynamic dispatch.
type IOutputSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	OUTPUT() antlr.TerminalNode
	Columns() IColumnsContext

	// IsOutputSectionContext differentiates from other interfaces.
	IsOutputSectionContext()
}

type OutputSectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOutputSectionContext() *OutputSectionContext {
	var p = new(OutputSectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CsvShiftGrammarParserRULE_outputSection
	return p
}

func (*OutputSectionContext) IsOutputSectionContext() {}

func NewOutputSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OutputSectionContext {
	var p = new(OutputSectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CsvShiftGrammarParserRULE_outputSection

	return p
}

func (s *OutputSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *OutputSectionContext) OUTPUT() antlr.TerminalNode {
	return s.GetToken(CsvShiftGrammarParserOUTPUT, 0)
}

func (s *OutputSectionContext) Columns() IColumnsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IColumnsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IColumnsContext)
}

func (s *OutputSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OutputSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OutputSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.EnterOutputSection(s)
	}
}

func (s *OutputSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.ExitOutputSection(s)
	}
}

func (p *CsvShiftGrammarParser) OutputSection() (localctx IOutputSectionContext) {
	this := p
	_ = this

	localctx = NewOutputSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CsvShiftGrammarParserRULE_outputSection)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(31)
		p.Match(CsvShiftGrammarParserOUTPUT)
	}
	{
		p.SetState(32)
		p.Columns()
	}

	return localctx
}

// IColumnModifierSectionContext is an interface to support dynamic dispatch.
type IColumnModifierSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SingleColumnModifierSection() ISingleColumnModifierSectionContext
	MultipleColumnModifierSection() IMultipleColumnModifierSectionContext

	// IsColumnModifierSectionContext differentiates from other interfaces.
	IsColumnModifierSectionContext()
}

type ColumnModifierSectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyColumnModifierSectionContext() *ColumnModifierSectionContext {
	var p = new(ColumnModifierSectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CsvShiftGrammarParserRULE_columnModifierSection
	return p
}

func (*ColumnModifierSectionContext) IsColumnModifierSectionContext() {}

func NewColumnModifierSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ColumnModifierSectionContext {
	var p = new(ColumnModifierSectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CsvShiftGrammarParserRULE_columnModifierSection

	return p
}

func (s *ColumnModifierSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *ColumnModifierSectionContext) SingleColumnModifierSection() ISingleColumnModifierSectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISingleColumnModifierSectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISingleColumnModifierSectionContext)
}

func (s *ColumnModifierSectionContext) MultipleColumnModifierSection() IMultipleColumnModifierSectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMultipleColumnModifierSectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMultipleColumnModifierSectionContext)
}

func (s *ColumnModifierSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ColumnModifierSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ColumnModifierSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.EnterColumnModifierSection(s)
	}
}

func (s *ColumnModifierSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.ExitColumnModifierSection(s)
	}
}

func (p *CsvShiftGrammarParser) ColumnModifierSection() (localctx IColumnModifierSectionContext) {
	this := p
	_ = this

	localctx = NewColumnModifierSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CsvShiftGrammarParserRULE_columnModifierSection)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(36)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case CsvShiftGrammarParserCOLUMN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(34)
			p.SingleColumnModifierSection()
		}

	case CsvShiftGrammarParserCOLUMNS:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(35)
			p.MultipleColumnModifierSection()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// ISingleColumnModifierSectionContext is an interface to support dynamic dispatch.
type ISingleColumnModifierSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLUMN() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	AllSingleColumnTransformation() []ISingleColumnTransformationContext
	SingleColumnTransformation(i int) ISingleColumnTransformationContext

	// IsSingleColumnModifierSectionContext differentiates from other interfaces.
	IsSingleColumnModifierSectionContext()
}

type SingleColumnModifierSectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySingleColumnModifierSectionContext() *SingleColumnModifierSectionContext {
	var p = new(SingleColumnModifierSectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CsvShiftGrammarParserRULE_singleColumnModifierSection
	return p
}

func (*SingleColumnModifierSectionContext) IsSingleColumnModifierSectionContext() {}

func NewSingleColumnModifierSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SingleColumnModifierSectionContext {
	var p = new(SingleColumnModifierSectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CsvShiftGrammarParserRULE_singleColumnModifierSection

	return p
}

func (s *SingleColumnModifierSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *SingleColumnModifierSectionContext) COLUMN() antlr.TerminalNode {
	return s.GetToken(CsvShiftGrammarParserCOLUMN, 0)
}

func (s *SingleColumnModifierSectionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(CsvShiftGrammarParserIDENTIFIER, 0)
}

func (s *SingleColumnModifierSectionContext) AllSingleColumnTransformation() []ISingleColumnTransformationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISingleColumnTransformationContext); ok {
			len++
		}
	}

	tst := make([]ISingleColumnTransformationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISingleColumnTransformationContext); ok {
			tst[i] = t.(ISingleColumnTransformationContext)
			i++
		}
	}

	return tst
}

func (s *SingleColumnModifierSectionContext) SingleColumnTransformation(i int) ISingleColumnTransformationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISingleColumnTransformationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISingleColumnTransformationContext)
}

func (s *SingleColumnModifierSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SingleColumnModifierSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SingleColumnModifierSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.EnterSingleColumnModifierSection(s)
	}
}

func (s *SingleColumnModifierSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.ExitSingleColumnModifierSection(s)
	}
}

func (p *CsvShiftGrammarParser) SingleColumnModifierSection() (localctx ISingleColumnModifierSectionContext) {
	this := p
	_ = this

	localctx = NewSingleColumnModifierSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, CsvShiftGrammarParserRULE_singleColumnModifierSection)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(CsvShiftGrammarParserCOLUMN)
	}
	{
		p.SetState(39)
		p.Match(CsvShiftGrammarParserIDENTIFIER)
	}
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8032) != 0) {
		{
			p.SetState(40)
			p.SingleColumnTransformation()
		}

		p.SetState(43)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IMultipleColumnModifierSectionContext is an interface to support dynamic dispatch.
type IMultipleColumnModifierSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLUMNS() antlr.TerminalNode
	Columns() IColumnsContext
	AllMultipleColumnTransformation() []IMultipleColumnTransformationContext
	MultipleColumnTransformation(i int) IMultipleColumnTransformationContext

	// IsMultipleColumnModifierSectionContext differentiates from other interfaces.
	IsMultipleColumnModifierSectionContext()
}

type MultipleColumnModifierSectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMultipleColumnModifierSectionContext() *MultipleColumnModifierSectionContext {
	var p = new(MultipleColumnModifierSectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CsvShiftGrammarParserRULE_multipleColumnModifierSection
	return p
}

func (*MultipleColumnModifierSectionContext) IsMultipleColumnModifierSectionContext() {}

func NewMultipleColumnModifierSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MultipleColumnModifierSectionContext {
	var p = new(MultipleColumnModifierSectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CsvShiftGrammarParserRULE_multipleColumnModifierSection

	return p
}

func (s *MultipleColumnModifierSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *MultipleColumnModifierSectionContext) COLUMNS() antlr.TerminalNode {
	return s.GetToken(CsvShiftGrammarParserCOLUMNS, 0)
}

func (s *MultipleColumnModifierSectionContext) Columns() IColumnsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IColumnsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IColumnsContext)
}

func (s *MultipleColumnModifierSectionContext) AllMultipleColumnTransformation() []IMultipleColumnTransformationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMultipleColumnTransformationContext); ok {
			len++
		}
	}

	tst := make([]IMultipleColumnTransformationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMultipleColumnTransformationContext); ok {
			tst[i] = t.(IMultipleColumnTransformationContext)
			i++
		}
	}

	return tst
}

func (s *MultipleColumnModifierSectionContext) MultipleColumnTransformation(i int) IMultipleColumnTransformationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMultipleColumnTransformationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMultipleColumnTransformationContext)
}

func (s *MultipleColumnModifierSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MultipleColumnModifierSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MultipleColumnModifierSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.EnterMultipleColumnModifierSection(s)
	}
}

func (s *MultipleColumnModifierSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CsvShiftGrammarListener); ok {
		listenerT.ExitMultipleColumnModifierSection(s)
	}
}

func (p *CsvShiftGrammarParser) MultipleColumnModifierSection() (localctx IMultipleColumnModifierSectionContext) {
	this := p
	_ = this

	localctx = NewMultipleColumnModifierSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, CsvShiftGrammarParserRULE_multipleColumnModifierSection)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.Match(CsvShiftGrammarParserCOLUMNS)
	}
	{
		p.SetState(46)
		p.Columns()
	}
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&3040) != 0) {
		{
			p.SetState(47)
			p.MultipleColumnTransformation()
		}
